marking up  user story steps and project requirements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!---------------------------main--------------------------->
         <main>
             <!--welcome-section-->
-            <section id="welcome-section">
+            <section id="welcome">
                 <img src="./photos/my-avatar.jpg" alt="profile-picture">
                 <h1>Welcome to my Portfolio</h1>
                 <p>I am a Junior Developer. With the help of Online Resources Like freeCodeCamp, I was able to come this far and build the very thing you are looking at right now. </p>
@@ -46,16 +46,16 @@
                     target="_blank"
                     class="project-tile" alt="survey-form-preview">
                         <img src="./photos/tribute-page.png" alt="tribute-page">
-                        <p class="project-title"><span class="code"><</span>
-                            Tribute Page <span class="code">/></span>
+                        <p class="project-title"><span class="code"></span>
+                            Tribute Page <span class="code"></span>
                         </p>
                     </a>
                     <a href="https://ibrahimabah.github.io/fcc-technical-documentation-page/" 
                     target="_blank"
                     class="project-tile" alt="survey-form-preview">
                         <img src="./photos/technical-page.png" alt="technical-page">
-                        <p class="project-title"><span class="code"><</span>
-                            Technical Page <span class="code">/></span>
+                        <p class="project-title"><span class="code"></span>
+                            Technical Page <span class="code"></span>
                         </p>
                     </a>
                 </div>
@@ -95,10 +95,7 @@
         <!---------------------------footer--------------------------->
         <footer>
             <p>
-                &copy; Inspired by
-                <a href="https://www.freecodecamp.com/" target="_blank"
-                  >freeCodeCamp <i class="fab fa-free-code-camp"></i
-                ></a>
+                &copy; Made by Ibrahima Bah, 2022
               </p>
         </footer>
     </body>
