update project section description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--projects-->
             <section id="projects">
                 <h2>
-                    These are Some of My freeCodeCamp Projects. 
+                    These are Some of Projects on GitHub. 
                 </h2>
                 <div class="project-log">
                     <a href="https://ibrahimabah.github.io/fCC-TributePage/" 
