updating #welcome and #contact p elements

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <section id="welcome">
                 <img src="./photos/my-avatar.jpg" alt="profile-picture">
                 <h1>Welcome to my Portfolio</h1>
-                <p>I am a Junior Developer. With the help of Online Resources Like freeCodeCamp, I was able to come this far and build the very thing you are looking at right now. </p>
+                <p>I am a Software Student working my way upto to a Developer role. With the help of online resources like CodeInstitute and freeCodeCamp I was able to contract this project from start to finish in under 3 months. I am proud of the results and I can't wait to see where my learning stages is going to take me.</p>
             </section>
 
             <!--projects-->
             <section id="projects">
                 <h2>
-                    These are Some of Projects on GitHub. 
+                    These are Some of my Projects on GitHub. 
                 </h2>
                 <div class="project-log">
                     <a href="https://ibrahimabah.github.io/fCC-TributePage/" 
@@ -64,8 +64,8 @@
             <!--contact-->
             <section id="contact">
                 <div id="contact-header">
-                    <h2> This is my Story</h2>
-                    <p>I can't wait to see what the future holds for you</p>
+                    <h2> Feel free to Get in touch</h2>
+                    <p>You can reach me out anytime using the below links. You never know, I might learn a thing or two from you expertise.</p>
                 </div>
                 <div id="contact-links">
                     <a
