--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="personal-portfolio"> 
-        <title>My Portfolio</title>
+        <link rel="shortcut icon"  type="image/gif/png" href="/photos/my-avatar.jpg" />
+        <title>Ibrahima Bah</title>
     </head>
     <body>
 
